Creating core app

--- a/app/views/layouts/application/_header.html.erb
+++ b/app/views/layouts/application/_header.html.erb
@@ -1,2 +1,10 @@
 <header>
+  <h5>
+    <% if get_user.nil? %>
+      <%= link_to "Sign_in", new_access_path %>
+    <% else %>
+      <%= get_user %>
+      <%= link_to "Sign_out", edit_access_path(:user) %>
+    <% end %>
+  <h5>
 </header>
